Archive2/71/bffcf9ee06808e/output
main.cpp: In function 'int main()':
main.cpp:8:17: error: taking address of temporary array
     f(T{1, 2, 3});
                 ^
